# opengl_glut_setup

./: CMakeLists.txt  glm_setup.cpp  main.cpp  opencv_setup.cpp  opencv_setup_test.cpp  opengl_setup.cpp  opengl_setup2.cpp  readme.md  thread_test.cpp
